# bidi-jsonrpc-stdio-example

./: README.md  main.ts  package.json  pnpm-lock.yaml
golang/: go.mod  server.go
rust/: Cargo.toml  README.md
rust/src/: main.rs
