[package]
name = "rust-server"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "io-std", "sync", "time"] }
tower-lsp = { version = "0.20.0", features = ["proposed"] }

